# PluginArch

./: CMakeLists.txt  PluginArch.sublime-project  PluginArch.sublime-workspace
src/: CMakeLists.txt
src/Kernel/: CMakeLists.txt  IPluginRegistrarProvider.h  Kernel.cpp  Kernel.h
src/Plugin/: CMakeLists.txt  ISharedLibraryLoader.h  Plugin.cpp  Plugin.h
src/PluginRegistrarFactory/: CMakeLists.txt  PluginRegistrarFactory.h
src/PluginRegistrarProvider/: CMakeLists.txt  PluginRegistrarProvider.h
src/PluginRegistrationService/: CMakeLists.txt  PluginRegistrationService.h
src/SharedLibraryLoader/: CMakeLists.txt  SharedLibraryLoader.cpp  SharedLibraryLoader.h
test/: CMakeLists.txt
test/AcceptanceTests/: CMakeLists.txt
test/AcceptanceTests/UserCase01/: CMakeLists.txt  UserCase01.cpp  UserCase01.txt
test/KernelTest/: CMakeLists.txt  Kernel.h  KernelTest.cpp  KernelTest.h  KernelTestMocks.h
test/PluginRegistrarFactory/: CMakeLists.txt  PluginRegistrarFactoryTest.cpp  PluginRegistrarFactoryTest.h
test/PluginRegistrarProviderTest/: CMakeLists.txt  PluginRegistrarProviderTest.h  PluginRegistrarProviderTestMocks.h
test/SharedLibraryTest/: SharedLibraryLoaderTest.h
test/UnitTests/: CMakeLists.txt
test/UnitTests/KernelTest/: CMakeLists.txt  KernelTest.cpp  KernelTest.h  KernelTestMocks.h
test/UnitTests/PluginRegistrarProviderTest/: CMakeLists.txt  PluginRegistrarProviderTest.cpp  PluginRegistrarProviderTest.h  PluginRegistrarProviderTestMocks.h
test/UnitTests/PluginRegistrationServiceTest/: CMakeLists.txt  PluginRegistrationServiceTest.cpp  PluginRegistrationServiceTest.h  PluginRegistrationServiceTestMocks.h
test/UnitTests/PluginTest/: CMakeLists.txt  PluginTest.cpp  PluginTest.h  PluginTestMocks.h
test/UnitTests/SharedLibraryTest/: CMakeLists.txt  SharedLibraryLoaderTest.cpp
test/UnitTests/SharedLibraryTest/SimpleObj/: CMakeLists.txt  MyClass.cpp  MyClass.h
